<resources>
    <string name="app_name">MemeBoard</string>
    <string name="login_title">Log in</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">Continue</string>

    <string name="for_you_title">For You</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_account">Account</string>
    <string name="like">Like</string>
    <string name="likes">%1$d likes</string>

    <string name="leaderboard_title">Top Memers</string>
    <string name="refresh">Refresh</string>

    <string name="account_title">My Account</string>
    <string name="display_name">Display name</string>
    <string name="save">Save</string>
    <string name="private_account">Private account</string>
    <string name="bio">Bio</string>

    <string name="toast_saved">Saved</string>
    <string name="sign_out">Sign out</string>
    <string name="title_account">My Account</string>
    <string name="title_leaderboard">Top Memers</string>
    <string name="label_period">Period</string>
    <string name="logo_desc">App logo</string>
    <string name="hint_email">Email</string>
    <string name="label_auto_login">Auto login</string>
    <string name="label_geofence_inside">I am on campus</string>
    <string name="label_email">Email</string>
    <string name="label_xp">XP</string>
    <string name="label_nickname">Nickname</string>
    <string name="btn_save">Save</string>
    <string name="unlike">Unlike</string>
    <string name="keep_signed_in">Keep me signed in</string>
</resources>
