<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView
            android:text="@string/account_title"
            android:textStyle="bold" android:textSize="22sp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="96dp" android:layout_height="96dp"
            android:layout_marginTop="12dp"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/account_title"/>

        <EditText
            android:id="@+id/etDisplayName"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/display_name" android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etBio"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/bio" android:layout_marginTop="8dp"
            android:inputType="textMultiLine" android:minLines="3"/>

        <CheckBox
            android:id="@+id/cbPrivate"
            android:text="@string/private_account"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="12dp">
            <Button
                android:id="@+id/btnBackToFeed"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/for_you_title" android:layout_weight="1"/>
            <Button
                android:id="@+id/btnToLeader"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/nav_leaderboard" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
